# Proyecto-Pruebas-Calidad

./: .ci-trigger  .gitignore  README.md  Untitled0.ipynb  pyproject.toml  requirements.txt
.github/workflows/: defensa-tests.yml  python-tests.yml  tests.yml
defense/core/: REF.md  service.py
src/projectocalidadsoftware/: background.py  health.py  main.py
tests/: test_ants_needed_tdd.py  test_health.py  test_main.py  test_poll_com.py  test_poll_env_loop.py  test_poll_env_tdd_rojo.py  test_utils.py
