[project]
name = "projectocalidadsoftware"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.120.1"
uvicorn = "^0.38.0"
pytest = "^8.4.2"
httpx = "^0.28.1"
nest-asyncio = "^1.6.0"
requests = "^2.32.5"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
